google-chrome-extension/style/summary-bar.css
@CHARSET "UTF-8";

#summary-bar {
	height: 35px;
	padding-left: 10px;
}

.mini_bar_header span {
	vertical-align: 30%;
}

#mini_bar_header img {
	margin-right: 10px;
}

span.url-label {
	font-weight:bold;
	float: left;
}

div.summary-description {
	font-weight: bold;
	height: 25px;
	line-height: 35px;
	color: #5180bb;
	cursor:default;
}

ul.summary-icons {
	margin:0;
	padding:0;
}

ul.summary-icons li {
	list-style-type: none;
	display: inline;
	color: #fff;
	font-size: 12px;
	font-weight: bold;
}

ul.summary-icons li div.icon{
	line-height: 35px;
	text-align: center;
	margin-left: 10px;
	height: 35px;
	width: 35px;
	margin-right: 10px;
	float: left;
	background: url('../images/logo.jpg') top left repeat;
	line-height: 32px;
	cursor: default;
}

div.summary-share-links {
	padding-bottom:10px;
	padding-top:5px;
}

#summary-icon-critical {
	background: url('../images/icon-critical.png') top left repeat;
	height: 32px;
	width: 32px;
}

#summary-icon-normal {
	background: url('../images/icon-normal.png') top left repeat;
	height: 32px;
	width: 32px;
}

#summary-icon-warning {
	background: url('../images/icon-warning.png') top left repeat;
	height: 32px;
	width: 32px;
}

#tab-link-trans {
	position: absolute;
	top: 0;
	left: 0;
	background: gray;
	width: 400px;
	height: 100px;
}

#tab-link {
	position: absolute;
	top: 0;
	left: 0;
	background: red;
	width: 200px;
	height: 100px;
}

.hidden {
	display: none;
}

#summary-bar-url {
	width: 30px;
	overflow: hidden;
}

